<resources>
    <string name="app_name">Tipper</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="service_question">How was the service?</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="good_18">Good (18%)</string>
    <string name="ok_15">OK (15%)</string>
    <string name="round_up_question">Round up tip?</string>
    <string name="calc_button">Calculate</string>
    <string name="tip_amount">Tip Amount: %s</string>
</resources>