<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/ic_cost_of_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/cost_of_service"
            app:layout_constraintBottom_toBottomOf="@id/cost_of_service"
            app:srcCompat="@drawable/ic_store"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cost_of_service"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:hint="@string/cost_of_service"
            app:layout_constraintStart_toEndOf="@id/ic_cost_of_service"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cost_of_service_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:id="@+id/ic_service_question"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_service"
            android:importantForAccessibility="no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/service_question"
            app:layout_constraintBottom_toBottomOf="@id/service_question"
            />
        <TextView
            android:id="@+id/service_question"
            android:layout_marginStart="16dp"
            style="@style/Widget.Tipper.textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/service_question"
            app:layout_constraintStart_toEndOf="@id/ic_service_question"
            app:layout_constraintTop_toBottomOf="@+id/cost_of_service" />

        <RadioGroup
            android:id="@+id/tip_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@id/option_twenty_percent"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@id/service_question"
            app:layout_constraintTop_toBottomOf="@id/service_question">

            <RadioButton
                android:id="@+id/option_twenty_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amazing_20" />

            <RadioButton
                android:id="@+id/option_eighteen_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good_18" />

            <RadioButton
                android:id="@+id/option_fifteen_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok_15" />
        </RadioGroup>

        <ImageView
            android:layout_width="wrap_content"
            android:id="@+id/ic_round_up"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_round_up"
            app:layout_constraintStart_toStartOf="parent"
            android:importantForAccessibility="no"
            app:layout_constraintTop_toTopOf="@id/round_up_switch"
            app:layout_constraintBottom_toBottomOf="@id/round_up_switch"
            />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/round_up_switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@id/ic_round_up"
            android:text="@string/round_up_question"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tip_options" />

        <Button
            android:id="@+id/calc_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/calc_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/round_up_switch"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/round_up_switch" />

        <TextView
            android:id="@+id/tip_amount"
            android:layout_width="wrap_content"
            android:layout_marginTop="8dp"
            style="@style/Widget.Tipper.textView"
            android:layout_height="wrap_content"
            android:text="Tip Amount: $10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calc_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
